# ai-services-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  african_nexus_works.csv  aphrc_backup.sql  docker-compose.yml  dspace.py  dspace_pubs.csv  expertise.csv  index_creator.py  init-db.sql  init-script-copy.sh  init-script.sh  init_graph.py  load_data.py  ngrok.yml  orcid.py  pyproject.toml  redis-graph.conf  redis.conf  setup-permissions.sh  setup.py  sme.csv  try_test.csv
Centralized-Repository/: aphrc.py  aphrc.py.bak  aphrc2.py  aphrc_limit.py  aphrc_publications.csv  main.py
Centralized-Repository/Database/: create_database.py  database.py  database_setup.py  database_setup.py.bak  delete_db.py.bak
Centralized-Repository/config/: settings.py.bak
Centralized-Repository/core/: database.py  models.py
Centralized-Repository/services/: dspace_service.py.bak  intergration_service.py.bak  openalex_service.py  orcid_service.py.bak  website_service.py.bak
ai_services_api/: app.py  main.py
ai_services_api/controllers/: chatbot_router.py  content_router.py  message_router.py.bak  recommendation_router.py  search_router.py  sentiment_router.py
ai_services_api/crud/: chatbot_crud.py
ai_services_api/services/: redis.conf  testing.py  testing.py.bak
ai_services_api/services/analytics/: app.py
ai_services_api/services/analytics/analytics/: chat_analytics.py  content_analytics.py  expert_analytics.py  overview_analytics.py  search_analytics.py  sentiment_analytics.py  usage_analytics.py
ai_services_api/services/analytics/components/: sidebar.py
ai_services_api/services/analytics/config/: settings.py
ai_services_api/services/analytics/pages/: ai_insights.py  base_page.py  content_analytics.py  expert_analytics.py  overview.py  user_engagement.py
ai_services_api/services/chatbot/: main.py  metrics_calculator.py  permissions.py  permissions.py.bak  schemas.py
ai_services_api/services/content/: main.py
ai_services_api/services/data/: database_setup.py  database_setup.py.bak  monthly_setup.py  openalex_processor.py  test.py  test.py.bak
ai_services_api/services/message/: config.py.bak  expert_service.py  expert_service.py.bak  gemini_client.py  gemini_client.py.bak  message.py  message.py.bak  message_generator.py  message_generator.py.bak  message_service.py
ai_services_api/services/models/: chunk_mapping.pkl  faiss_index.idx
ai_services_api/services/recommendation/: analytics_manager.py  app.py  clean.py  clean_data.py  collect_data.py  collect_domain.py  config.py  expert_domains_fields_subfields.csv  extract_experts.py  graph_initializer.py  graph_initializer.py.bak  init_graph.py  main.py  test.csv  try.csv  try.py  updated_sme.csv
ai_services_api/services/search/: app.py  app.py.bak  config.py  data_processor.py  database_manager.py  database_manager.py.bak  database_manager_x.py  dependencies.py  embedding_model.py  expert_search.py  expert_search.py.bak  experts_manager.py  index_creator.py  index_creator.py.bak  metrics_calculator.py.bak  ml_predictor.py  ml_predictor.py.bak  new_index_creator.py  redis_embeddings.py  redis_embeddings.py.bak  redis_index_manager.py  redis_index_manager.py.bak  search_engine.py  search_index.py  test.py  test.py.bak  test.sh
ai_services_api/services/sentiment/: main.py
ai_services_api/templates/: index.html  recommendations.html  search.html
airflow/dags/: monthly_setup_dag.py
dags/: publication_processing_dag.py.bak
data/: experts.csv  test.csv
intergration/: main.py.bak
intergration/core/: config.py  database.py.bak
intergration/intergrators/: base.py  dspace.py.bak
intergration/utils/: deduplication.py.bak
local/: run.sh
models/search/: chunk_mapping.pkl
redis-graph-data/: appendonly.aof  dump.rdb
scripts/: init-script.sh
(+76 files in other folders)
