[tool.poetry]
name = "ai-api-services"
version = "0.1.0"
description = "AI Services API with FastAPI and LangChain"
authors = ["kimu90 <briankimutai@icloud.com>"]
readme = "README.md"
packages = [
    { include = "ai_services_api" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
langchain = "^0.1.12"
redis = "^4.6.0"  # Updated Redis version
neo4j = "^5.11.0"  # Neo4j driver
python-dotenv = "^1.0.1"
langchain-google-genai = "^0.0.11"
pydantic = "^2.6.4"
numpy = "^1.26.4"
uvicorn = "^0.27.1"
pandas = "^2.2.1"
pyarrow = "^15.0.1"
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
backoff = "^2.2.1"
psycopg2 = "^2.9.10"
python-multipart = "^0.0.17"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.poetry.scripts]
start = "ai_services_api.main:start"
